--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.4.1",
     "react-redux": "5.0.7",
     "react-select": "1.2.1",
+    "react-sortable-hoc": "^0.8.3",
     "react-sticky-box": "0.6.2",
     "redux": "4.0.0",
     "reset-css": "4.0.1",
