--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "flexboxgrid": "6.3.1",
+    "formik": "1.0.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -46,10 +47,10 @@
     "redux": "4.0.0",
     "reset-css": "4.0.1",
     "resolve": "1.6.0",
+    "short-uuid": "3.0.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
-    "uuid-js": "0.7.5",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
