--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-redux": "5.0.7",
     "react-responsive-modal": "3.1.0",
     "react-router-dom": "4.3.1",
-    "react-select": "1.2.1",
+    "react-select": "^1.2.1",
     "react-sortable-hoc": "0.8.3",
     "react-sticky-box": "0.6.2",
     "redux": "4.0.0",
