--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.1",
+    "react-datepicker": "1.6.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-media": "1.8.0",
