--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-sortable-hoc": "0.8.3",
     "react-sticky-box": "0.6.2",
     "redux": "4.0.0",
+    "reselect": "3.0.1",
     "reset-css": "4.0.1",
     "resolve": "1.6.0",
     "short-uuid": "3.0.0",
